Fix background on iOS intento 8

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,3 @@
-html, body { height: 100%; min-height: 100%; }
-
-.full-screen { height: 100%; min-height: 100%; }
-
 body {
 	font-family: 'Lato', sans-serif;
 }
